--- a/SkyboxGallery.html
+++ b/SkyboxGallery.html
@@ -9,6 +9,8 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 
   <script src="SkyboxGallery.js" defer></script>
   <!-- <script src="Obfusticated.js"></script> -->
@@ -212,16 +214,16 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
+			<div id="container" style="height:70vh;"></div>
           <img src="" class="img-fluid" id="imageModalImg" alt="" hidden>
-          <div id="container"></div>
-
+          
           <div class="mt-3" id="imageModalDetails">
             <p class="creator"></p>
             <p>
               <strong>Prompt:</strong> <span class="prompt"></span><br>
               <strong>Negative Prompt:</strong> <span class="negative-prompt"></span><br>
               <strong>Seed:</strong> <span class="seed"></span>
-            </p>
+            </p>			
           </div>
         </div>
       </div>
